kustomize-catbook/catbook-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: catbook
  namespace: catbook
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: catbook
