kustomize-catbook/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catbook-ingress
  namespace: catbook
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: catbook.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kustomize-catbook
            port:
              number: 80
